# pax

./: .gitignore  LICENSE.md  README.md  meson.build
header/light/Base/: Array.hpp  Buf.hpp  Buffer.hpp  Opt.hpp  Res.hpp  String.hpp  Vec.hpp  bits.hpp  define.hpp  import.hpp  math.hpp  util.hpp
header/light/Base/inline/: Array.inl  Buf.inl  Buffer.inl  Opt.inl  Res.inl  Vec.inl
header/light/Engine/: Actor.hpp  Camera.hpp  Display.hpp  Engine.hpp  Event.hpp  Event_Table.hpp  Grid.hpp  Grid_Layer.hpp  Painter.hpp  Receiver.hpp  State.hpp  Timer.hpp  View.hpp  define.hpp  import.hpp
header/light/Engine/Events/: Event.hpp  Event_Broker.hpp  Event_Queue.hpp  Event_Source.hpp  Event_System_Source.hpp  Keybd_Event.hpp  Mouse_Event.hpp  Observer.hpp
header/light/Engine/Kernel/: Display.hpp  Grid.hpp  Painter.hpp
header/light/Engine/inline/: Event_Broker.inl  Event_Source.inl  Event_Table.inl
header/light/Events/: Dispatcher.hpp  Event.hpp  Observable.hpp  Observer.hpp  define.hpp  import.hpp
header/light/Events/inline/: Dispatcher.inl  Observable.inl
header/light/Memory/: Alloc.hpp  Array.hpp  Array2d.hpp  Bump_Alloc.hpp  Pool_Alloc.hpp  define.hpp  import.hpp  util.hpp
header/light/Memory/inline/: Alloc.inl  Array.inl  Array2d.inl
header/light/Signal/: Observer.hpp  Signal.hpp  define.hpp  import.hpp
header/light/Signal/inline/: Signal.inl
header/pax/Base/: Buf.hpp  Opt.hpp  Res.hpp  String.hpp  Vec.hpp  bits.hpp  define.hpp  import.hpp  math.hpp  util.hpp
header/pax/Base/inline/: Buf.inl  Opt.inl  Res.inl  Vec.inl
header/pax/Engine/: Engine.hpp  Tile_Grid.hpp  define.hpp  import.hpp
header/pax/Engine/Kernel/: Display.hpp  Grid.hpp  Grid_Layer.hpp  Painter.hpp  Screen.hpp  State.hpp  Timer.hpp  View.hpp
header/pax/Memory/: Alloc.hpp  Array.hpp  Array2d.hpp  Array_List.hpp  Builder.hpp  Bump_Alloc.hpp  Pool_Alloc.hpp  define.hpp  import.hpp  util.hpp
header/pax/Signal/: Dispatcher.hpp  Observable.hpp  Observer.hpp  Signal.hpp  Source.hpp  define.hpp  import.hpp
include/pax/Base/: Array.hpp  Array2d.hpp  Grid_Iter.hpp  Invoker.hpp  Line_Iter.hpp  List.hpp  Option.hpp  Storage.hpp  Store.hpp  String.hpp  Vec2d.hpp  Vector.hpp  define.hpp  import.hpp  macros.hpp  math.hpp
include/pax/Engine/: Clock.hpp  Display.hpp  Engine.hpp  Events.hpp  Inputs.hpp  Monitor.hpp  Painter.hpp  State.hpp  View.hpp  define.hpp  import.hpp
include/pax/Signal/: Dispatcher.hpp  define.hpp  import.hpp
source/: main.cpp  main_allocs.cpp  main_events.cpp  main_memory.cpp  main_signal.cpp  main_tlmaps.cpp  main_v0.cpp
source/game/: Actor_Layer.cpp  Actor_Layer.hpp  Controls.cpp  Controls.hpp  Floor_Layer.cpp  Floor_Layer.hpp  Game_State.cpp  Game_State.hpp  Piece.cpp  Piece.hpp
source/light/Base/: String.cpp  bits.cpp  math.cpp  meson.build  util.cpp
source/light/Engine/: Actor.cpp  Display.cpp  Engine.cpp  Event.cpp  Grid.cpp  Grid_Layer.cpp  Painter.cpp  State.cpp  Timer.cpp  View.cpp  meson.build
source/light/Engine/Events/: Event_Queue.cpp  Event_System_Source.cpp  Keybd_Event.cpp  Mouse_Event.cpp
source/light/Engine/Kernel/: Display.cpp  Grid.cpp  Grid_Layer.cpp  Painter.cpp  State.cpp  Timer.cpp  View.cpp
source/light/Memory/: Bump_Alloc.cpp  Pool_Alloc.cpp  meson.build  util.cpp
source/pax/Base/: String.cpp  bits.cpp  math.cpp  meson.build
source/pax/Engine/: Engine.cpp  View.cpp  meson.build
source/pax/Engine/Kernel/: Display.cpp  Grid.cpp  Grid_Layer.cpp  Painter.cpp  Screen.cpp  State.cpp  Timer.cpp  View.cpp
source/pax/Engine/Signal/: Display_Signal.cpp  Keybd_Signal.cpp  Mouse_Signal.cpp  System_Source.cpp
source/pax/Memory/: Builder.cpp  Bump_Alloc.cpp  Pool_Alloc.cpp  meson.build  util.cpp
source/pax/Signal/: Dispatcher.cpp  meson.build
sources/: test.cpp  test_base.cpp  test_engine.cpp  test_signal.cpp
sources/demo/: Main_State.hpp  Maze.hpp  Movement.hpp  Position.hpp  define.hpp
sources/pax/: meson.build
sources/pax/Base/: String.cpp  math.cpp  meson.build
sources/pax/Engine/: Clock.cpp  Display.cpp  Engine.cpp  Events.cpp  Inputs.cpp  Monitor.cpp  Painter.cpp  State.cpp  View.cpp  meson.build
sources/pax/Signal/: Dispatcher.cpp  meson.build
(+22 files in other folders)
