pax_engine = static_library('pax-engine',
    include_directories: pax_header,
    sources: [
        'Clock.cpp',
        'Display.cpp',
        'Painter.cpp',
        'Monitor.cpp',
        'Events.cpp',
        'Inputs.cpp',
        'State.cpp',
        'View.cpp',
        'Engine.cpp',
    ],
)

pax_define = pax_define + [pax_engine]
